@@ -1,3 +1,9 @@
+2007-09-05  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclBasic.c:	Removed support for the unmaintained
+	* generic/tclExecute.c:	-DTCL_GENERIC_ONLY configuration. [Bug 1264623]
+	* unix/Makefile.in:
+
 2007-09-04  Don Porter  <dgp@users.sourceforge.net>
 
 	* unix/Makefile.in:	It's unreliable to count on the release
